--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,12 +5,13 @@ source:
   git_url: https://github.com/GenericMappingTools/gmt.git
   git_rev: 52c6629ebdd8533309abd6f34bcb545d60f84153
 build:
-  number: 0
+  number: 1
   skip: True  # [win and vc<14]
 requirements:
   build:
     - cmake
     - {{ compiler('c') }}
+    - make  # [not win]
   host:
     - libblas
     - libcblas
@@ -41,8 +42,6 @@ requirements:
     - pcre
     - gshhg-gmt  # [not win]
     - dcw-gmt  # [not win]
-    - ffmpeg
-    - graphicsmagick
 test:
   commands:
     - gmt defaults -Vd
