--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,9 +9,10 @@ source:
   sha256: 225629c7869e204d5f9f1a384c4ada43e243f83e1ed28bdca4f7c2896bf39ef6
   patches:
     - no_matlab.patch
+    - crosscompiling.patch
 
 build:
-  number: 17
+  number: 18
   skip: true  # [win and vc<14]
 
 requirements:
