--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,8 +5,9 @@ source:
   git_url: https://github.com/GenericMappingTools/gmt.git
   git_rev: b0c2f6d21da983b6c674e95facca729f69979961
 build:
-  number: 2
-  skip: True  # [win and vc<14]
+  number: 3
+  skip: true  # [win and vc<14]
+
 requirements:
   build:
     - cmake
@@ -31,14 +32,14 @@ requirements:
     - libblas
     - libcblas
     - liblapack
-    - fftw
-    - gdal
+    - {{ pin_compatible('fftw', max_pin='x') }}
+    - {{ pin_compatible('gdal', max_pin='x.x') }}
     - geos
     - ghostscript
     - libnetcdf
     - hdf5
-    - zlib
-    - curl
+    - {{ pin_compatible('zlib', max_pin='x.x') }}
+    - {{ pin_compatible('curl', max_pin='x') }}
     - pcre
     - gshhg-gmt  # [not win]
     - dcw-gmt  # [not win]
