--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,12 +50,16 @@ requirements:
 
 test:
   commands:
+    # Test plotting basemap with coastlines
     - gmt defaults -Vd
     - gmt psbasemap -R10/70/-3/8 -JX4i/3i -Ba -B+glightred+t"TEST" -P -Vd > test0.ps
     - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -P -Vd > test1.ps
     - gmt begin -Vd
     - gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -Vd
     - gmt end
+    # Test OpenMP multi-core with -x2
+    - gmt-config --all
+    - gmt grdmath -Rg -I1 0 90 SDIST = dist_to_NP.nc -x2
 
 about:
   home: https://www.generic-mapping-tools.org
