--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - fftw
     - gdal
     - geos
+    - glib
     - ghostscript
     - libnetcdf
     - hdf5
@@ -35,7 +36,6 @@ requirements:
   run:
     - libblas
     - libcblas
-    - libglib
     - liblapack
     - {{ pin_compatible('fftw', max_pin='x') }}
     - {{ pin_compatible('gdal', max_pin='x.x') }}
